--- a/trio-ircproxy/requirements.txt
+++ b/trio-ircproxy/requirements.txt
@@ -1,77 +1,17 @@
-<<<<<<< HEAD
 async-generator==1.10
-attrs==22.2.0
-Automat==22.10.0
-certifi==2022.12.7
-cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==3.0.1
-click==8.1.3
-colorama==0.4.6
-constantly==15.1.0
 cryptography==39.0.0
-filehash==0.2.dev1
-Flask==1.1.1
-Flask-Login==0.4.1
-Flask-SQLAlchemy==2.4.1
-gevent==22.10.2
-greenlet==2.0.2
-hyperlink==21.0.0
-idna==3.4
-incremental==22.10.0
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==0.23
-mypy-extensions==1.0.0
-outcome==1.2.0
+itsdangerous==2.1.2
+mypy-extensions==0.4.3
 pendulum==2.1.2
 pif==0.8.2
-platformdirs==3.0.0
-pycparser==2.21
+platformdirs==2.6.2
 pyOpenSSL==23.0.0
 python-dateutil==2.8.2
-pytzdata==2020.1
-requests==2.28.2
-service_identity==21.1.0
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-SQLAlchemy==1.3.10
-trio==0.22.0
-trio-typing==0.7.0
-Twisted==22.10.0
-twisted-iocpsupport==1.0.2
-typing==3.7.4.3
-typing_extensions==4.4.0
-urllib3==1.26.14
-Werkzeug==0.16.0
-zope.event==4.6
-zope.interface==5.5.2
-=======
-attrs=>22.2.0
-cffi=>1.15.1
-chardet=>5.1.0
-click=>8.1.3
-colorama=>0.4.6
-cryptography=>39.0.0
-filehash=>0.2.dev1
-Flask=>2.2.2
-Flask-Login=>0.6.2
-Flask-SQLAlchemy=>3.0.3
-gevent=>22.10.2
-greenlet=>2.0.2
-pendulum=>2.1.2
-pyOpenSSL=>23.0.0
-python-dateutil=>2.8.2
-SQLAlchemy=>2.0.2
-trio=>0.22.0
-trio-typing=>0.7.0
-Twisted=>22.10.0
-twisted-iocpsupport=>1.0.2
-typing=>3.7.4.3
-typing_extensions=>4.4.0
-urllib3=>1.26.14
-Werkzeug=>2.2.2
-zope.event=>4.6
-zope.interface=>5.5.2
->>>>>>> parent of 06f953d (Cleaned up requiremnts.txt)
+pytzdata>=2020.1
+flask_login
+sortedcontainers>=2.4.0
+trio>=0.22.0
+trio-typing>=0.7.0
+typing>=3.7.4.3
+typing_extensions>=4.4.0
+urllib3>=1.26.14
