--- a/trio-ircproxy/scripts/www/www-server-config.ini
+++ b/trio-ircproxy/scripts/www/www-server-config.ini
@@ -1,49 +1,15 @@
 [DEFAULT]
-using-topic-setup = Windows-Service
-web-server-hostname = 127.0.0.1
-web-server-port = 80
-url-prefix = /
-debug = false
-running_os = linux
-remote-website = false
+using-topic-setup = PythonAnywhere
 
-[Service]
-web-server-hostname = 127.0.0.1
-web-server-port = 80
-url-prefix = /
-debug = false
-running_os = windows
-remote-website = false
-
-[Linux-Service]
-web-server-hostname = 127.0.0.1
-web-server-port = 1234
-url-prefix = /
-debug = false
-running_os = linux
-remote-website = false
-
-[Windows-Service]
-web-server-hostname = 127.0.0.1
-web-server-port = 80
-url-prefix = /
-debug = false
-running_os = windows
-remote-website = false
-
-[ashburry.PythonAnywhere.com]
-web-server-hostname = ashburry.pythonanywhere.com
-web-server-port = 80
-url-prefix = /
-debug = false
-running_os = linux
-remote-website = true
-
-[username.PythonAnywhere.com]
+[PythonAnywhere]
 web-server-hostname = username.pythonanywhere.com
-web-server-port = 80
+web-server-port = 443
 url-prefix = /
-debug = false
-running_os = linux
 remote-website = true
 
+[localhost]
+web-server-hostname = 127.0.0.1
+web-server-port = 80
+url-prefix = /
+remote-website = false
+note = web-server-port must be 80 while running on localhost.
