--- a/trio-ircproxy/requirements.txt
+++ b/trio-ircproxy/requirements.txt
@@ -1,17 +1,17 @@
-async-generator==1.10
-cryptography==39.0.0
-itsdangerous==2.1.2
-mypy-extensions==0.4.3
-pendulum==2.1.2
-pif==0.8.2
-platformdirs==2.6.2
-pyOpenSSL==23.0.0
-python-dateutil==2.8.2
-pytzdata>=2020.1
-flask_login
-sortedcontainers>=2.4.0
+# You must have OpenSSL installed before installing Python 10 and up
+
 trio>=0.22.0
 trio-typing>=0.7.0
+cryptography>=39.0.0
+itsdangerous>=2.1.2
+mypy-extensions>=0.4.3
+pendulum>=2.1.2
+pif>=0.8.2
+platformdirs>=3.1.1
+pyOpenSSL>=23.0.0
+python-dateutil>=2.8.2
+pytzdata>=2020.1
+sortedcontainers>=2.4.0
 typing>=3.7.4.3
-typing_extensions>=4.4.0
+typing_extensions>=4.5.0
 urllib3>=1.26.14
