--- a/trio-ircproxy/scripts/deploy/www/www-server-config.ini
+++ b/trio-ircproxy/scripts/deploy/www/www-server-config.ini
@@ -1,5 +1,8 @@
 [DEFAULT]
 using-topic-setup = PythonAnywhere
+url-prefix = /
+web-server-hostname = 127.0.0.1
+web-server-port = 80
 
 [PythonAnywhere]
 web-server-hostname = username.pythonanywhere.com
@@ -13,3 +16,7 @@ web-server-port = 80
 url-prefix = /
 remote-website = false
 note = web-server-port must be 80 while running on localhost.
+
+[Service]
+debug = true
+
