--- a/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
+++ b/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
@@ -72,190 +72,191 @@ n20=&connect irc
 [mpopup]
 n0=$chr(46) $chr(58) M&achine Gun $str($chr(58),2) $chr(58)
 n1=-
-n2=&flood protection
-n3=-
-n4=&server commands
-n5=.part room
-n6=..$iif(($chan(1)),$chan(1) $block($chan(1).status)) : /part $chan(1) * Trio-ircproxy.py & MG script named Bauderr *
-n7=..$iif(($chan(2)),$chan(2) $block($chan(2).status)) : /part $chan(2) * Trio-ircproxy.py & MG script named Bauderr *
-n8=..$iif(($chan(3)),$chan(3) $block($chan(3).status)) : /part $chan(3) * Trio-ircproxy.py & MG script named Bauderr *
-n9=..$iif(($chan(4)),$chan(4) $block($chan(4).status)) : /part $chan(4) * Trio-ircproxy.py & MG script named Bauderr *
-n10=..$iif(($chan(5)),$chan(5) $block($chan(5).status)) : /part $chan(5) * Trio-ircproxy.py & MG script named Bauderr *
-n11=..$iif(($chan(6)),$chan(6) $block($chan(6).status)) : /part $chan(6) * Trio-ircproxy.py & MG script named Bauderr *
-n12=..$iif(($chan(7)),$chan(7) $block($chan(7).status)) : /part $chan(7) * Trio-ircproxy.py & MG script named Bauderr *
-n13=..$iif(($chan(8)),$chan(8) $block($chan(8).status)) : /part $chan(8) * Trio-ircproxy.py & MG script named Bauderr *
-n14=..$iif(($chan(9)),$chan(9) $block($chan(9).status)) : /part $chan(9) * Trio-ircproxy.py & MG script named Bauderr *
-n15=..$iif(($chan(10)), $block($chan(10) $block($chan(10).status))) : /part $chan(10) * Trio-ircproxy.py & MG script named Bauderr *
-n16=..-
-n17=..partall : partall * Trio-ircproxy.py & MG script named Bauderr *
-n18=.[join room] 
-n19=..$submenu($parted_rooms($1))
-n20=..-
-n21=..[new room] : join $$input(Type a room name to join:,eoygbqk60,type a room name to join,#5ioE)
-n22=.-
-n23=.[motd] : motd
-n24=.-
-n25=.whois query
-n26=..$query(1) : whois $query(1)
-n27=..$query(2) : whois $query(2)
-n28=..$query(3) : whois $query(3)
-n29=..$query(4) : whois $query(4)
-n30=..$query(5) : whois $query(5)
-n31=..$query(6) : whois $query(6)
-n32=..$query(7) : whois $query(7)
-n33=..$query(8) : whois $query(8)
-n34=..$query(9) : whois $query(9)
-n35=..$iif(($query(10) != $null),$block($query(10))) : whois $query(10)
-n36=.[who room (update ial)]
-n37=..$chan(1) $ialupdated($chan(1)): /ialfill -f $chan(1)
-n38=..$chan(2) $ialupdated($chan(2)) : /ialfill -f $chan(2)
-n39=..$chan(3) $ialupdated($chan(3)) : /ialfill -f $chan(3)
-n40=..$chan(4) $ialupdated($chan(4)) : /ialfill -f $chan(4)
-n41=..$chan(5) $ialupdated($chan(5)) : /ialfill -f $chan(5)
-n42=..$chan(6) $ialupdated($chan(6)) : /ialfill -f $chan(6)
-n43=..$chan(7) $ialupdated($chan(7)) : /ialfill -f $chan(7)
-n44=..$chan(8) $ialupdated($chan(8)) : /ialfill -f $chan(8)
-n45=..$chan(9) $ialupdated($chan(9)) : /ialfill -f $chan(9)
-n46=..$iif(($chan(10) != $null),$block($chan(10) $ialupdated($chan(9)))) : /ialfill -f $chan(10)
-n47=..-
-n48=..[nick or room] : who $$input(Type a room or nickname:,eoygbqk60,type a room or nickname,#5ioE)
-n49=.-
-n50=.lusers : lusers
-n51=.links : links
-n52=.[list room] : list
-n53=.-
-n54=.quit : quit * Trio-ircproxy.py & MG script named Bauderr *
-n55=&client commands
-n56=.[auto-join invite]
-n57=..off : ajinvite off
-n58=..[on] : ajinvite on
-n59=.-
-n60=.a/q/op-message
-n61=..amsg : amsg $$input(Speak your message to all channels:,eygbqk60,type your message to all channels,I hear'd everyone is welcome to room 5ioE on Undernet.)
-n62=..ame : ame $$input(Describe your action to all channels:,eygbqk60,describe your action to all channel,wonders who is in room 5ioE on Undernet)
-n63=..-
-n64=..qmsg : qmsg $$input(Speak your message to all query windows:,eygbqk60,speak your message to all query windows,anyone know what /amsg does?)
-n65=..qme : qme $$input(Describe your action to all query windows:,eygbqk60,describe your action to all query windows,wonders what /qme will do...)
-n66=..-
-n67=..op notice : onotice-script
-n68=..op message : omsg-script
-n69=.-
-n70=.ban
-n71=..unban : ban -r $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type or ban mask:"
-n72=..ban : ban -bu700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter ban mask or nick and type:"
-n73=..ban kick : ban -ku700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nickname and ban type [sum1znick 2] and kick message:"
-n74=..ban except : ban -e $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask:"
-n75=..invite : ban -I $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask"
-n76=..quiet : ban -q $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type:"
-n77=.[channnel dialog] : channel $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32))
-n78=.-
-n79=.clear status : clear -s
-n80=.[clearall]
-n81=..status : clearall -s
-n82=..channel : clearall -c
-n83=..query : clearall -q
-n84=..messages : clearall -m
-n85=..[windows] : clearall -a
-n86=.[close]
-n87=..gets : close -g
-n88=..sends : close -s
-n89=..fserve : close -f
-n90=..chats : close -c
-n91=..-
-n92=..[inactive] : close -i
-n93=.-
-n94=.chat request $block($iif($creq == auto,accept,$creq))
-n95=..minimize
-n96=...ask : creq +m ask
-n97=...accept : creq +m auto
-n98=...ignore : creq +m ignore
-n99=..ask : creq -m ask
-n100=..accept : creq -m auto
-n101=..ignore : creq -m ignore
-n102=.send request $block($iif($sreq == auto,accept,$sreq))
-n103=..minimize
-n104=...ask : sreq +m ask
-n105=...accept : sreq +m auto
-n106=...ignore : sreq +m ignore
-n107=..ask : sreq -m ask
-n108=..accept : sreq -m auto
-n109=..ignore : sreq -m ignore
-n110=.-
-n111=.dns
-n112=..nick : dns -46 $$?="enter nickname:"
-n113=..host : dns -h46 $$?="enter hostname:"
-n114=.[localinfo] 
-n115=..127.0.0.1 : localinfo 127.0.0.1 | set $varname_global(localinfo,blank) 127.0.0.1
-n116=..lookup 192.168.x.x : if $status == connected) { localinfo -u } | else { localinfo -h } | set $varname_global(localinfo,blank) -h
-n117=..[lookup irc-server] : if $status == connected) { localinfo -u | eecho you must setup port forwarding and static ip to mac address with your routers web-server. } | else { localinfo -h | errecho not connected to irc-server. using /localinfo localhost switch instead. } | set $varname_global(localinfo,blank) -u 
-n118=.-
-n119=.$iif($donotdisturb == $true,$style(1)) [do not disturb] : /donotdisturb $iif($donotdisturb == $true,off,on)
-n120=.[color rainbow sky] : color -s rainbow sky
-n121=.-
-n122=.nickname
-n123=..main nick : mnick $$?="ener your main nickname:"
-n124=..alternate nick : anick $$?="ener your alternate nickname:"
-n125=..temporary nick : tnick $$?="ener your temporary nickname:"
-n126=.[email name]
-n127=..[emailaddr] : /emailaddr MG-script
-n128=..[fullname] : /fullname : :: MG script :. @ https://Ashburry.PythonAnywhere.com/
-n129=..-
-n130=..[set both] : /emailaddr MG-script | /fullname : :: MG script :. @ https://Ashburry.PythonAnywhere.com/
-n131=.-
-n132=.exit : exit
-n133=.-
-n134=.[resetidle $block($idle)]: /resetidle $?="enter number of seconds:"
-n135=-
-n136=script &functions
-n137=.anti i&dle
-n138=.[&auto-away]
-n139=.-
-n140=.[&show irc oper]
-n141=.$style_show_away [&show away nick]
-n142=..$style_show_away_note notice : set_show_away 1
-n143=..$style_show_away_priv [private message] : set_show_away 2
-n144=..-
-n145=..$style_show_away_not do not show : set_show_away 0
-n146=.-
-n147=.[&auto-identify chan]
-n148=.[&auto-identify nick]
-n149=.[auto-join &room]
-n150=..&edit room list
-n151=..&renmove thus room
-n152=..[&add this room]
-n153=..-
-n154=..[&switch on]
-n155=.-
-n156=.[&ascii-art]
-n157=..&stop play
-n158=..pl&ay here
-n159=...[select file]
-n160=.[&bin-art]
-n161=..&stop play
-n162=..[pl&ay here]
-n163=...[select file]
-n164=.[&sound]
-n165=..stop play : splay stop
-n166=..[play here]
-n167=...$submenu($play-sound-history($1))
-n168=...[select file] : play-sound $iif($active == $chan || $active == $nick,$ifmatch,$gettok($$?="enter a room or nickname to play to:",1,32)) $qw($sfile($sound($INPUT(Select a sound folder source:,ygbqdum,select a sound folder source,$active,mp3,midi,ogg,wma,wave)),*.mp3;*.ogg;*.wma;*.mid;*.wav),Select a sound file:, Play))
-n169=&room functions
-n170=.&chanserv
-n171=.topi&c history
-n172=.-
-n173=.[&allow prevention]
-n174=.[ir&c oper scan]
-n175=.-
-n176=.auto -+ovb
-n177=..auto-&ban
-n178=..&auto-op
-n179=..auto-&voice
-n180=..-
-n181=..&edit lists
-n182=; delay in list  (ini)
-n183=-
-n184=&trio-ircproxy.py
-n185=&xdcc search
-n186=-
-n187=$iif(($status == connected),&quit irc) : quit 54,88.: MG script named Bauderr :: :
-n188=&connect irc
+n2=; DO A /WHOISf $ME ON CONNECT AND CHECK IF $1- != $chan($1) THEN ADD TO Join/Part LIST POPUP
+n3=&flood protection
+n4=-
+n5=&server commands
+n6=.part room
+n7=..$iif(($chan(1)),$chan(1) $block($chan(1).status)) : /part $chan(1) * Trio-ircproxy.py & MG script named Bauderr *
+n8=..$iif(($chan(2)),$chan(2) $block($chan(2).status)) : /part $chan(2) * Trio-ircproxy.py & MG script named Bauderr *
+n9=..$iif(($chan(3)),$chan(3) $block($chan(3).status)) : /part $chan(3) * Trio-ircproxy.py & MG script named Bauderr *
+n10=..$iif(($chan(4)),$chan(4) $block($chan(4).status)) : /part $chan(4) * Trio-ircproxy.py & MG script named Bauderr *
+n11=..$iif(($chan(5)),$chan(5) $block($chan(5).status)) : /part $chan(5) * Trio-ircproxy.py & MG script named Bauderr *
+n12=..$iif(($chan(6)),$chan(6) $block($chan(6).status)) : /part $chan(6) * Trio-ircproxy.py & MG script named Bauderr *
+n13=..$iif(($chan(7)),$chan(7) $block($chan(7).status)) : /part $chan(7) * Trio-ircproxy.py & MG script named Bauderr *
+n14=..$iif(($chan(8)),$chan(8) $block($chan(8).status)) : /part $chan(8) * Trio-ircproxy.py & MG script named Bauderr *
+n15=..$iif(($chan(9)),$chan(9) $block($chan(9).status)) : /part $chan(9) * Trio-ircproxy.py & MG script named Bauderr *
+n16=..$iif(($chan(10)), $block($chan(10) $block($chan(10).status))) : /part $chan(10) * Trio-ircproxy.py & MG script named Bauderr *
+n17=..-
+n18=..partall : partall * Trio-ircproxy.py & MG script named Bauderr *
+n19=.[join room] 
+n20=..$submenu($parted_rooms($1))
+n21=..-
+n22=..[new room] : join $$input(Type a room name to join:,eoygbqk60,type a room name to join,#5ioE)
+n23=.-
+n24=.[motd] : motd
+n25=.-
+n26=.whois query
+n27=..$query(1) : whois $query(1)
+n28=..$query(2) : whois $query(2)
+n29=..$query(3) : whois $query(3)
+n30=..$query(4) : whois $query(4)
+n31=..$query(5) : whois $query(5)
+n32=..$query(6) : whois $query(6)
+n33=..$query(7) : whois $query(7)
+n34=..$query(8) : whois $query(8)
+n35=..$query(9) : whois $query(9)
+n36=..$iif(($query(10) != $null),$block($query(10))) : whois $query(10)
+n37=.[ial-fill]
+n38=..$chan(1) $ialupdated($chan(1)): /ialfill -f $chan(1)
+n39=..$chan(2) $ialupdated($chan(2)) : /ialfill -f $chan(2)
+n40=..$chan(3) $ialupdated($chan(3)) : /ialfill -f $chan(3)
+n41=..$chan(4) $ialupdated($chan(4)) : /ialfill -f $chan(4)
+n42=..$chan(5) $ialupdated($chan(5)) : /ialfill -f $chan(5)
+n43=..$chan(6) $ialupdated($chan(6)) : /ialfill -f $chan(6)
+n44=..$chan(7) $ialupdated($chan(7)) : /ialfill -f $chan(7)
+n45=..$chan(8) $ialupdated($chan(8)) : /ialfill -f $chan(8)
+n46=..$chan(9) $ialupdated($chan(9)) : /ialfill -f $chan(9)
+n47=..$iif(($chan(10) != $null),$block($chan(10) $ialupdated($chan(9)))) : /ialfill -f $chan(10)
+n48=..-
+n49=..room : ialfill -f $$input(Type a room:,eoygbqk60,type a room,#5ioE)
+n50=.-
+n51=.lusers : lusers
+n52=.links : links
+n53=.[list room] : list
+n54=.-
+n55=.quit : quit * Trio-ircproxy.py & MG script named Bauderr *
+n56=&client commands
+n57=.[auto-join invite]
+n58=..off : ajinvite off
+n59=..[on] : ajinvite on
+n60=.-
+n61=.a/q/op-message
+n62=..amsg : amsg $$input(Speak your message to all channels:,eygbqk60,type your message to all channels,I hear'd everyone is welcome to room 5ioE on Undernet.)
+n63=..ame : ame $$input(Describe your action to all channels:,eygbqk60,describe your action to all channel,wonders who is in room 5ioE on Undernet)
+n64=..-
+n65=..qmsg : qmsg $$input(Speak your message to all query windows:,eygbqk60,speak your message to all query windows,anyone know what /amsg does?)
+n66=..qme : qme $$input(Describe your action to all query windows:,eygbqk60,describe your action to all query windows,wonders what /qme will do...)
+n67=..-
+n68=..op notice : onotice-script
+n69=..op message : omsg-script
+n70=.-
+n71=.ban
+n72=..unban : ban -r $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type or ban mask:"
+n73=..ban : ban -bu700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter ban mask or nick and type:"
+n74=..ban kick : ban -ku700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nickname and ban type [sum1znick 2] and kick message:"
+n75=..ban except : ban -e $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask:"
+n76=..invite : ban -I $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask"
+n77=..quiet : ban -q $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type:"
+n78=.[channnel dialog] : channel $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32))
+n79=.-
+n80=.clear status : clear -s
+n81=.[clearall]
+n82=..status : clearall -s
+n83=..channel : clearall -c
+n84=..query : clearall -q
+n85=..messages : clearall -m
+n86=..[windows] : clearall -a
+n87=.[close]
+n88=..gets : close -g
+n89=..sends : close -s
+n90=..fserve : close -f
+n91=..chats : close -c
+n92=..-
+n93=..[inactive] : close -i
+n94=.-
+n95=.chat request $block($iif($creq == auto,accept,$creq))
+n96=..minimize
+n97=...ask : creq +m ask
+n98=...accept : creq +m auto
+n99=...ignore : creq +m ignore
+n100=..ask : creq -m ask
+n101=..accept : creq -m auto
+n102=..ignore : creq -m ignore
+n103=.send request $block($iif($sreq == auto,accept,$sreq))
+n104=..minimize
+n105=...ask : sreq +m ask
+n106=...accept : sreq +m auto
+n107=...ignore : sreq +m ignore
+n108=..ask : sreq -m ask
+n109=..accept : sreq -m auto
+n110=..ignore : sreq -m ignore
+n111=.-
+n112=.dns
+n113=..nick : dns -46 $$?="enter nickname:"
+n114=..host : dns -h46 $$?="enter hostname:"
+n115=.[localinfo] 
+n116=..127.0.0.1 : localinfo 127.0.0.1 | set $varname_global(localinfo,blank) 127.0.0.1
+n117=..lookup 192.168.x.x : if $status == connected) { localinfo -u } | else { localinfo -h } | set $varname_global(localinfo,blank) -h
+n118=..[lookup irc-server] : if $status == connected) { localinfo -u | eecho you must setup port forwarding and static ip to mac address with your routers web-server. } | else { localinfo -h | errecho not connected to irc-server. using /localinfo localhost switch instead. } | set $varname_global(localinfo,blank) -u 
+n119=.-
+n120=.$iif($donotdisturb == $true,$style(1)) [do not disturb] : /donotdisturb $iif($donotdisturb == $true,off,on)
+n121=.[color rainbow sky] : color -s rainbow sky
+n122=.-
+n123=.nickname
+n124=..main nick : mnick $$?="ener your main nickname:"
+n125=..alternate nick : anick $$?="ener your alternate nickname:"
+n126=..temporary nick : tnick $$?="ener your temporary nickname:"
+n127=.[spoof email && name]
+n128=..[emailaddr] : /emailaddr mg-script
+n129=..[fullname] : /fullname .: mg script :: : @ https://Ashburry.PythonAnywhere.com/
+n130=..-
+n131=..[set both] : /emailaddr MG-script | /fullname : :: MG script :. @ https://Ashburry.PythonAnywhere.com/
+n132=.-
+n133=.exit : exit
+n134=.-
+n135=.[resetidle $block($idle)]: /resetidle $?="enter number of seconds:"
+n136=-
+n137=script &functions
+n138=.anti i&dle
+n139=.[&auto-away]
+n140=.-
+n141=.[&show irc oper]
+n142=.$style_show_away [&show away nick]
+n143=..$style_show_away_note notice : set_show_away 1
+n144=..$style_show_away_priv [private message] : set_show_away 2
+n145=..-
+n146=..$style_show_away_not do not show : set_show_away 0
+n147=.-
+n148=.[&auto-identify chan]
+n149=.[&auto-identify nick]
+n150=.[auto-join &room]
+n151=..&edit room list
+n152=..&renmove thus room
+n153=..[&add this room]
+n154=..-
+n155=..[&switch on]
+n156=.-
+n157=.[&ascii-art]
+n158=..&stop play
+n159=..pl&ay here
+n160=...[select file]
+n161=.[&bin-art]
+n162=..&stop play
+n163=..[pl&ay here]
+n164=...[select file]
+n165=.[&sound]
+n166=..stop play : splay stop
+n167=..[play here]
+n168=...$submenu($play-sound-history($1))
+n169=...[select file] : play-sound $iif($active == $chan || $active == $nick,$ifmatch,$gettok($$?="enter a room or nickname to play to:",1,32)) $qw($sfile($sound($INPUT(Select a sound folder source:,ygbqdum,select a sound folder source,$active,mp3,midi,ogg,wma,wave)),*.mp3;*.ogg;*.wma;*.mid;*.wav),Select a sound file:, Play))
+n170=&room functions
+n171=.&chanserv
+n172=.topi&c history
+n173=.-
+n174=.[&allow prevention]
+n175=.[ir&c oper scan]
+n176=.-
+n177=.auto -+ovb
+n178=..auto-&ban
+n179=..&auto-op
+n180=..auto-&voice
+n181=..-
+n182=..&edit lists
+n183=; delay in list  (ini)
+n184=-
+n185=&trio-ircproxy.py
+n186=&xdcc search
+n187=-
+n188=$iif(($status == connected),&quit irc) : quit 54,88.: MG script named Bauderr :: :
+n189=&connect irc
