Remove web-server, recode some lost msl script code.

--- a/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
+++ b/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
@@ -94,169 +94,175 @@ n20=..$submenu($parted_rooms($1))
 n21=..-
 n22=..[new room] : join $$input(Type a room name to join:,eoygbqk60,type a room name to join,#5ioE)
 n23=.-
-n24=.[motd] : motd
-n25=.-
-n26=.whois query
-n27=..$query(1) : whois $query(1)
-n28=..$query(2) : whois $query(2)
-n29=..$query(3) : whois $query(3)
-n30=..$query(4) : whois $query(4)
-n31=..$query(5) : whois $query(5)
-n32=..$query(6) : whois $query(6)
-n33=..$query(7) : whois $query(7)
-n34=..$query(8) : whois $query(8)
-n35=..$query(9) : whois $query(9)
-n36=..$iif(($query(10) != $null),$block($query(10))) : whois $query(10)
-n37=.[ial-fill]
-n38=..$chan(1) $ialupdated($chan(1)): /ialfill -f $chan(1)
-n39=..$chan(2) $ialupdated($chan(2)) : /ialfill -f $chan(2)
-n40=..$chan(3) $ialupdated($chan(3)) : /ialfill -f $chan(3)
-n41=..$chan(4) $ialupdated($chan(4)) : /ialfill -f $chan(4)
-n42=..$chan(5) $ialupdated($chan(5)) : /ialfill -f $chan(5)
-n43=..$chan(6) $ialupdated($chan(6)) : /ialfill -f $chan(6)
-n44=..$chan(7) $ialupdated($chan(7)) : /ialfill -f $chan(7)
-n45=..$chan(8) $ialupdated($chan(8)) : /ialfill -f $chan(8)
-n46=..$chan(9) $ialupdated($chan(9)) : /ialfill -f $chan(9)
-n47=..$iif(($chan(10) != $null),$block($chan(10) $ialupdated($chan(9)))) : /ialfill -f $chan(10)
-n48=..-
-n49=..room : ialfill -f $$input(Type a room:,eoygbqk60,type a room,#5ioE)
-n50=.-
-n51=.lusers : lusers
-n52=.links : links
-n53=.[list room] : list
-n54=.-
-n55=.quit : quit * Trio-ircproxy.py & MG script named Bauderr *
-n56=&client commands
-n57=.[auto-join invite]
-n58=..off : ajinvite off
-n59=..[on] : ajinvite on
+n24=.$iif(($status != connected),$style(2)) [motd] 
+n25=..$chr($asc([)) $+ $server $+ $chr($asc(])) : motd
+n26=..www.mslscript.com : msl_motd
+n27=..-
+n28=..on connect
+n29=...show www.mslscrpt.com : msl show-motd msl.com
+n30=...show irc server : msl show-motd irc_server
+n31=.-
+n32=.whois query
+n33=..$query(1) : whois $query(1)
+n34=..$query(2) : whois $query(2)
+n35=..$query(3) : whois $query(3)
+n36=..$query(4) : whois $query(4)
+n37=..$query(5) : whois $query(5)
+n38=..$query(6) : whois $query(6)
+n39=..$query(7) : whois $query(7)
+n40=..$query(8) : whois $query(8)
+n41=..$query(9) : whois $query(9)
+n42=..$iif(($query(10) != $null),$block($query(10))) : whois $query(10)
+n43=.[ial-fill]
+n44=..$chan(1) $ialupdated($chan(1)): /ialfill -f $chan(1)
+n45=..$chan(2) $ialupdated($chan(2)) : /ialfill -f $chan(2)
+n46=..$chan(3) $ialupdated($chan(3)) : /ialfill -f $chan(3)
+n47=..$chan(4) $ialupdated($chan(4)) : /ialfill -f $chan(4)
+n48=..$chan(5) $ialupdated($chan(5)) : /ialfill -f $chan(5)
+n49=..$chan(6) $ialupdated($chan(6)) : /ialfill -f $chan(6)
+n50=..$chan(7) $ialupdated($chan(7)) : /ialfill -f $chan(7)
+n51=..$chan(8) $ialupdated($chan(8)) : /ialfill -f $chan(8)
+n52=..$chan(9) $ialupdated($chan(9)) : /ialfill -f $chan(9)
+n53=..$iif(($chan(10) != $null),$block($chan(10) $ialupdated($chan(9)))) : /ialfill -f $chan(10)
+n54=..-
+n55=..room : ialfill -f $$input(Type a room:,eoygbqk60,type a room,#5ioE)
+n56=.-
+n57=.lusers : lusers
+n58=.links : links
+n59=.[list room] : list
 n60=.-
-n61=.a/q/op-message
-n62=..amsg : amsg $$input(Speak your message to all channels:,eygbqk60,type your message to all channels,I hear'd everyone is welcome to room 5ioE on Undernet.)
-n63=..ame : ame $$input(Describe your action to all channels:,eygbqk60,describe your action to all channel,wonders who is in room 5ioE on Undernet)
-n64=..-
-n65=..qmsg : qmsg $$input(Speak your message to all query windows:,eygbqk60,speak your message to all query windows,anyone know what /amsg does?)
-n66=..qme : qme $$input(Describe your action to all query windows:,eygbqk60,describe your action to all query windows,wonders what /qme will do...)
-n67=..-
-n68=..op notice : onotice-script
-n69=..op message : omsg-script
-n70=.-
-n71=.ban
-n72=..unban : ban -r $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type or ban mask:"
-n73=..ban : ban -bu700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter ban mask or nick and type:"
-n74=..ban kick : ban -ku700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nickname and ban type [sum1znick 2] and kick message:"
-n75=..ban except : ban -e $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask:"
-n76=..invite : ban -I $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask"
-n77=..quiet : ban -q $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type:"
-n78=.[channnel dialog] : channel $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32))
-n79=.-
-n80=.clear status : clear -s
-n81=.[clearall]
-n82=..status : clearall -s
-n83=..channel : clearall -c
-n84=..query : clearall -q
-n85=..messages : clearall -m
-n86=..[windows] : clearall -a
-n87=.[close]
-n88=..gets : close -g
-n89=..sends : close -s
-n90=..fserve : close -f
-n91=..chats : close -c
-n92=..-
-n93=..[inactive] : close -i
-n94=.-
-n95=.chat request $block($iif($creq == auto,accept,$creq))
-n96=..minimize
-n97=...ask : creq +m ask
-n98=...accept : creq +m auto
-n99=...ignore : creq +m ignore
-n100=..ask : creq -m ask
-n101=..accept : creq -m auto
-n102=..ignore : creq -m ignore
-n103=.send request $block($iif($sreq == auto,accept,$sreq))
-n104=..minimize
-n105=...ask : sreq +m ask
-n106=...accept : sreq +m auto
-n107=...ignore : sreq +m ignore
-n108=..ask : sreq -m ask
-n109=..accept : sreq -m auto
-n110=..ignore : sreq -m ignore
-n111=.-
-n112=.dns
-n113=..nick : dns -46 $$?="enter nickname:"
-n114=..host : dns -h46 $$?="enter hostname:"
-n115=.[localinfo] 
-n116=..127.0.0.1 : localinfo 127.0.0.1 | set $varname_global(localinfo,blank) 127.0.0.1
-n117=..lookup 192.168.x.x : if $status == connected) { localinfo -u } | else { localinfo -h } | set $varname_global(localinfo,blank) -h
-n118=..[lookup irc-server] : if $status == connected) { localinfo -u | eecho you must setup port forwarding and static ip to mac address with your routers web-server. } | else { localinfo -h | errecho not connected to irc-server. using /localinfo localhost switch instead. } | set $varname_global(localinfo,blank) -u 
-n119=.-
-n120=.$iif($donotdisturb == $true,$style(1)) [do not disturb] : /donotdisturb $iif($donotdisturb == $true,off,on)
-n121=.[color rainbow sky] : color -s rainbow sky
-n122=.-
-n123=.nickname
-n124=..main nick : mnick $$?="ener your main nickname:"
-n125=..alternate nick : anick $$?="ener your alternate nickname:"
-n126=..temporary nick : tnick $$?="ener your temporary nickname:"
-n127=.[spoof email && name]
-n128=..[emailaddr] : /emailaddr mg-script
-n129=..[fullname] : /fullname .: mg script :: : @ https://Ashburry.PythonAnywhere.com/
-n130=..-
-n131=..[set both] : /emailaddr MG-script | /fullname : :: MG script :. @ https://Ashburry.PythonAnywhere.com/
-n132=.-
-n133=.exit : exit
-n134=.-
-n135=.[resetidle $block($idle)]: /resetidle $?="enter number of seconds:"
-n136=-
-n137=script &functions
-n138=.anti i&dle
-n139=.[&auto-away]
+n61=.quit : quit * Trio-ircproxy.py & MG script named Bauderr *
+n62=&client commands
+n63=.[auto-join invite]
+n64=..off : ajinvite off
+n65=..[on] : ajinvite on
+n66=.-
+n67=.a/q/op-message
+n68=..amsg : amsg $$input(Speak your message to all channels:,eygbqk60,type your message to all channels,I hear'd everyone is welcome to room 5ioE on Undernet.)
+n69=..ame : ame $$input(Describe your action to all channels:,eygbqk60,describe your action to all channel,wonders who is in room 5ioE on Undernet)
+n70=..-
+n71=..qmsg : qmsg $$input(Speak your message to all query windows:,eygbqk60,speak your message to all query windows,anyone know what /amsg does?)
+n72=..qme : qme $$input(Describe your action to all query windows:,eygbqk60,describe your action to all query windows,wonders what /qme will do...)
+n73=..-
+n74=..op notice : onotice-script
+n75=..op message : omsg-script
+n76=.-
+n77=.ban
+n78=..unban : ban -r $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type or ban mask:"
+n79=..ban : ban -bu700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter ban mask or nick and type:"
+n80=..ban kick : ban -ku700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nickname and ban type [sum1znick 2] and kick message:"
+n81=..ban except : ban -e $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask:"
+n82=..invite : ban -I $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask"
+n83=..quiet : ban -q $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type:"
+n84=.[channnel dialog] : channel $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32))
+n85=.-
+n86=.clear status : clear -s
+n87=.[clearall]
+n88=..status : clearall -s
+n89=..channel : clearall -c
+n90=..query : clearall -q
+n91=..messages : clearall -m
+n92=..[windows] : clearall -a
+n93=.[close]
+n94=..gets : close -g
+n95=..sends : close -s
+n96=..fserve : close -f
+n97=..chats : close -c
+n98=..-
+n99=..[inactive] : close -i
+n100=.-
+n101=.chat request $block($iif($creq == auto,accept,$creq))
+n102=..minimize
+n103=...ask : creq +m ask
+n104=...accept : creq +m auto
+n105=...ignore : creq +m ignore
+n106=..ask : creq -m ask
+n107=..accept : creq -m auto
+n108=..ignore : creq -m ignore
+n109=.send request $block($iif($sreq == auto,accept,$sreq))
+n110=..minimize
+n111=...ask : sreq +m ask
+n112=...accept : sreq +m auto
+n113=...ignore : sreq +m ignore
+n114=..ask : sreq -m ask
+n115=..accept : sreq -m auto
+n116=..ignore : sreq -m ignore
+n117=.-
+n118=.dns
+n119=..nick : dns -46 $$?="enter nickname:"
+n120=..host : dns -h46 $$?="enter hostname:"
+n121=.[localinfo] 
+n122=..127.0.0.1 : localinfo 127.0.0.1 | set $varname_global(localinfo,blank) 127.0.0.1
+n123=..lookup 192.168.x.x : if $status == connected) { localinfo -u } | else { localinfo -h } | set $varname_global(localinfo,blank) -h
+n124=..[lookup irc-server] : if $status == connected) { localinfo -u | eecho you must setup port forwarding and static ip to mac address with your routers web-server. } | else { localinfo -h | errecho not connected to irc-server. using /localinfo localhost switch instead. } | set $varname_global(localinfo,blank) -u 
+n125=.-
+n126=.$iif($donotdisturb == $true,$style(1)) [do not disturb] : /donotdisturb $iif($donotdisturb == $true,off,on)
+n127=.[color rainbow sky] : color -s rainbow sky
+n128=.-
+n129=.nickname
+n130=..main nick : mnick $$?="ener your main nickname:"
+n131=..alternate nick : anick $$?="ener your alternate nickname:"
+n132=..temporary nick : tnick $$?="ener your temporary nickname:"
+n133=.[spoof email && name]
+n134=..[emailaddr] : /emailaddr mg-script
+n135=..[fullname] : /fullname .: mg script :: : @ https://Ashburry.PythonAnywhere.com/
+n136=..-
+n137=..[set both] : /emailaddr MG-script | /fullname : :: MG script :. @ https://Ashburry.PythonAnywhere.com/
+n138=.-
+n139=.exit : exit
 n140=.-
-n141=.[&show irc oper]
-n142=.$style_show_away [&show away nick]
-n143=..$style_show_away_note notice : set_show_away 1
-n144=..$style_show_away_priv [private message] : set_show_away 2
-n145=..-
-n146=..$style_show_away_not do not show : set_show_away 0
-n147=.-
-n148=.[&auto-identify chan]
-n149=.[&auto-identify nick]
-n150=.[auto-join &room]
-n151=..&edit room list
-n152=..&renmove thus room
-n153=..[&add this room]
-n154=..-
-n155=..[&switch on]
-n156=.-
-n157=.[&ascii-art]
-n158=..&stop play
-n159=..pl&ay here
-n160=...[select file]
-n161=.[&bin-art]
-n162=..&stop play
-n163=..[pl&ay here]
-n164=...[select file]
-n165=.[&sound]
-n166=..stop play : splay stop
-n167=..[play here]
-n168=...$submenu($play-sound-history($1))
-n169=...[select file] : play-sound $iif($active == $chan || $active == $nick,$ifmatch,$gettok($$?="enter a room or nickname to play to:",1,32)) $qw($sfile($sound($INPUT(Select a sound folder source:,ygbqdum,select a sound folder source,$active,mp3,midi,ogg,wma,wave)),*.mp3;*.ogg;*.wma;*.mid;*.wav),Select a sound file:, Play))
-n170=&room functions
-n171=.&chanserv
-n172=.topi&c history
-n173=.-
-n174=.[&allow prevention]
-n175=.[ir&c oper scan]
-n176=.-
-n177=.auto -+ovb
-n178=..auto-&ban
-n179=..&auto-op
-n180=..auto-&voice
-n181=..-
-n182=..&edit lists
-n183=; delay in list  (ini)
-n184=-
-n185=&trio-ircproxy.py
-n186=&xdcc search
-n187=-
-n188=$iif(($status == connected),&quit irc) : quit 54,88.: MG script named Bauderr :: :
-n189=&connect irc
+n141=.[resetidle $block($idle)]: /resetidle $?="enter number of seconds:"
+n142=-
+n143=script &functions
+n144=.anti i&dle
+n145=.[&auto-away]
+n146=.-
+n147=.[&show irc oper]
+n148=.$style_show_away [&show away nick]
+n149=..$style_show_away_note notice : set_show_away 1
+n150=..$style_show_away_priv [private message] : set_show_away 2
+n151=..-
+n152=..$style_show_away_not do not show : set_show_away 0
+n153=.-
+n154=.[&auto-identify chan]
+n155=.[&auto-identify nick]
+n156=.[auto-join &room]
+n157=..&edit room list
+n158=..&renmove thus room
+n159=..[&add this room]
+n160=..-
+n161=..[&switch on]
+n162=.-
+n163=.[&ascii-art]
+n164=..&stop play
+n165=..pl&ay here
+n166=...[select file]
+n167=.[&bin-art]
+n168=..&stop play
+n169=..[pl&ay here]
+n170=...[select file]
+n171=.[&sound]
+n172=..stop play : splay stop
+n173=..[play here]
+n174=...$submenu($play-sound-history($1))
+n175=...[select file] : play-sound $iif($active == $chan || $active == $nick,$ifmatch,$gettok($$?="enter a room or nickname to play to:",1,32)) $qw($sfile($sound($INPUT(Select a sound folder source:,ygbqdum,select a sound folder source,$active,mp3,midi,ogg,wma,wave)),*.mp3;*.ogg;*.wma;*.mid;*.wav),Select a sound file:, Play))
+n176=&room functions
+n177=.&chanserv
+n178=.topi&c history
+n179=.-
+n180=.[&allow prevention]
+n181=.[ir&c oper scan]
+n182=.-
+n183=.auto -+ovb
+n184=..auto-&ban
+n185=..&auto-op
+n186=..auto-&voice
+n187=..-
+n188=..&edit lists
+n189=; delay in list  (ini)
+n190=-
+n191=&trio-ircproxy.py
+n192=&xdcc search
+n193=-
+n194=$iif(($status == connected),&quit irc) : quit 54,88.: MG script named Bauderr :: :
+n195=&connect irc
