Test commmit Ran out of memory, hopefully no code was lost.

--- a/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
+++ b/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
@@ -132,7 +132,7 @@ n58=.links : links
 n59=.[list room] : list
 n60=.-
 n61=.quit : quit * Trio-ircproxy.py & MG script named Bauderr *
-n62=&client commands
+n62=&client comm`s
 n63=.[auto-join invite]
 n64=..off : ajinvite off
 n65=..[on] : ajinvite on
@@ -253,16 +253,10 @@ n179=.-
 n180=.[&allow prevention]
 n181=.[ir&c oper scan]
 n182=.-
-n183=.auto -+ovb
-n184=..auto-&ban
-n185=..&auto-op
-n186=..auto-&voice
-n187=..-
-n188=..&edit lists
-n189=; delay in list  (ini)
-n190=-
-n191=&trio-ircproxy.py
-n192=&xdcc search
-n193=-
-n194=$iif(($status == connected),&quit irc) : quit 54,88.: MG script named Bauderr :: :
-n195=&connect irc
+n183=.n&etwork channel link
+n184=-
+n185=&trio-ircproxy.py
+n186=&xdcc search
+n187=-
+n188=$iif(($status == connected),&quit irc) : quit 54,88.: MG script named Bauderr :: :
+n189=&connect irc
