--- a/trio-ircproxy/scripts/website_and_proxy/settings/bnc_settings.ini
+++ b/trio-ircproxy/scripts/website_and_proxy/settings/bnc_settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 status_nick = *STATUS!trio-ircproxy@mg-script.com
 allow_quitmsg = no
-listen_port = 4321
+listen_ports = 4321
 skip_motd = yes
 public_ip = 127.0.0.1
 
@@ -9,7 +9,7 @@ public_ip = 127.0.0.1
 allow_quitmsg = yes
 personal_flood = on
 channel_flood = on
-listen_port = 4321
+listen_ports = 4321 1234
 skip_motd = yes
 public_ip = unknown
-status_nick = *STATUS!trio-ircproxy@mg-script.com
+status_nick = *STATUS-[mg]!trio-ircproxy@www.mslscript.com
