--- a/trio-ircproxy/requirements.txt
+++ b/trio-ircproxy/requirements.txt
@@ -1,5 +1,4 @@
-# You must have OpenSSL installed before installing Python 10 and up
-
+pytz>=2003.3
 trio>=0.22.0
 trio-typing>=0.7.0
 cryptography>=39.0.0
@@ -8,7 +7,6 @@ mypy-extensions>=0.4.3
 pendulum>=2.1.2
 pif>=0.8.2
 platformdirs>=3.1.1
-pyOpenSSL>=23.0.0
 python-dateutil>=2.8.2
 pytzdata>=2020.1
 sortedcontainers>=2.4.0
