Duplicate yes_no() to prevent circular import seems like the best plan, I will add comments after this 'git push'

--- a/trio-ircproxy/scripts/website_and_proxy/settings/bnc_settings.ini
+++ b/trio-ircproxy/scripts/website_and_proxy/settings/bnc_settings.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-status_nick = *STATUS!trio-ircproxy@mg-script.com
+status_nick = *mg-script!trio-ircproxy.py@www.mslscript.com
 allow_quitmsg = no
 listen_ports = 4321
 skip_motd = yes
@@ -12,4 +12,4 @@ channel_flood = on
 listen_ports = 4321 1234
 skip_motd = yes
 public_ip = unknown
-status_nick = *STATUS-[mg]!trio-ircproxy@www.mslscript.com
+status_nick = *mg-script!trio-ircproxy.py@www.mslscript.com
