--- a/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
+++ b/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
@@ -103,8 +103,8 @@ n29=..$chr($asc([)) $+ $server $+ $chr($asc(])) : motd
 n30=..www.mslscript.com : msl_motd
 n31=..-
 n32=..on connect
-n33=...show www.mslscrpt.com : msl show-motd msl.com
-n34=...show irc server : msl show-motd irc_server
+n33=...show www.mslscrpt.com : msl show-motd www.mslscript.com
+n34=...show irc server : msl show-motd
 n35=.-
 n36=.whois query
 n37=..$query(1) : whois $query(1)
