--- a/trio-ircproxy/requirements.txt
+++ b/trio-ircproxy/requirements.txt
@@ -3,6 +3,7 @@ git+https://github.com/python-validators/validators
 git+https://github.com/DiffSK/configobj
 git+https://github.com/encode/httpx
 pyshark
+chardet
 argparse>=1.4.0
 pytz>=2003.3
 trio-typing>=0.7.0
