Add conf.py with random example Now I need to have a docs/conf.py file for readthedocs to work. I just used the random example

--- a/.gitignore
+++ b/.gitignore
@@ -124,7 +124,7 @@ lint/tmp/
 # venv
 venv/
 # docs
-docs/*
+#docs/*
 # __pycache__
 trio-ircproxy/scripts/__pycache__/
 trio-ircproxy/scripts/trio_ircproxy/__pycache__/
