Fix some bugs, fix some exceptions It is now in working condition, soon I will add a lanuage settings to add support for multiple languages.

--- a/trio-ircproxy/requirements.txt
+++ b/trio-ircproxy/requirements.txt
@@ -2,6 +2,7 @@ git+https://github.com/python-trio/trio.git
 git+https://github.com/python-validators/validators
 git+https://github.com/DiffSK/configobj
 git+https://github.com/encode/httpx
+translate
 pyshark
 chardet
 argparse>=1.4.0
