--- a/trio-ircproxy/requirements.txt
+++ b/trio-ircproxy/requirements.txt
@@ -5,7 +5,7 @@ git+https://github.com/encode/httpx
 traitlets
 translate
 pyshark
-chardet
+chardet>=5.2.0
 argparse>=1.4.0
 pytz>=2003.3
 trio-typing>=0.7.0
