--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run Unit Tests
       run: |
-        python unittest discover
+        python unittest trio-ircproxy/trio-ircproxy.py
 
     - name: Run Linting
       run: |
