--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.12'
+        python-version: '3.13'
 
     - name: Install dependencies
       run: |
         python -m pip install pip
         python -m pip install --upgrade pip
-        pip install -r trio-ircproxy/requirements.txt
-
+        if [ -f trio-ircproxy\requirements.txt ]; then pip install -r trio-ircproxy\requirements.txt; fi
     - name: Run Unit Tests
       run: |
         python unittest trio-ircproxy/trio-ircproxy.py
