Fixed run-ircproxy.yml debug Put the debug run in the wrong file and accidentally restored ci.yml so no ci.yml is removed.

--- a/.github/workflows/run-ircproxy.yml
+++ b/.github/workflows/run-ircproxy.yml
@@ -18,6 +18,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r trio-ircproxy/requirements.txt
 
+      - name: Debug repo contents
+	  run: ls -R
+
       - name: Run Trio-Ircproxy.py
         run: python Ircproxy/trio-ircproxy/trio-ircproxy.py
 
