--- a/trio-ircproxy/scripts/website_and_proxy/settings/bnc_settings.ini
+++ b/trio-ircproxy/scripts/website_and_proxy/settings/bnc_settings.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-status_nick = *mg-script!trio-ircproxy.py@www.mslscript.com
+status_nick = *Status!trio-ircproxy.py@www.MyProxyIP.com
 allow_quitmsg = no
 listen_ports = 4321
 skip_motd = yes
@@ -7,9 +7,7 @@ public_ip = 127.0.0.1
 
 [settings]
 allow_quitmsg = yes
-personal_flood = on
-channel_flood = on
 listen_ports = 4321 1234
 skip_motd = yes
 public_ip = unknown
-status_nick = *mg-script!trio-ircproxy.py@www.mslscript.com
+status_nick = *Status!trio-ircproxy.py@www.MyProxyIP.com
